--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/genradley/JSDisplayObjectAlignment.git"
+    "url": "https://github.com/genradley/Align.git"
   },
   "keywords": [
     "display object",
@@ -40,7 +40,7 @@
   "author": "Genell Radley",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/genradley/JSDisplayObjectAlignment/issues"
+    "url": "https://github.com/genradley/Align/issues"
   },
-  "homepage": "https://github.com/genradley/JSDisplayObjectAlignment"
+  "homepage": "https://github.com/genradley/Align"
 }
